Introduced deaf/undeaf for a leg. Changed response of leg creation to make it consistend with the rest
