# internal/api/server.go
@@ -98,6 +98,8 @@ func (s *Server) routes() {
 		r.Post("/legs/{id}/early-media", s.earlyMediaLeg)
 		r.Post("/legs/{id}/mute", s.muteLeg)
 		r.Delete("/legs/{id}/mute", s.unmuteLeg)
+		r.Post("/legs/{id}/deaf", s.deafLeg)
+		r.Delete("/legs/{id}/deaf", s.undeafLeg)
 		r.Post("/legs/{id}/hold", s.holdLeg)
 		r.Delete("/legs/{id}/hold", s.unholdLeg)
 		r.Delete("/legs/{id}", s.deleteLeg)
